<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3FFF9"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/edit_task_menu"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/DescriptionMTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/acceptTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/accept" />

    <Button
        android:id="@+id/doneTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/done" />

    <Button
        android:id="@+id/SaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/save" />

    <TextView
        android:id="@+id/StartedAtTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ChangedAtTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/FinishedAtTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>
