<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TaskCV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:elevation="5dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="15dp"
    app:contentPadding="10dp">


    <TextView
        android:id="@+id/TaskTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/demo" />

    <ImageView
        android:id="@+id/DoneIV"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:contentDescription="@string/done_with_the_task"
        android:contextClickable="false"
        app:srcCompat="@drawable/ic_done"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/PendingIV"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical|end"
        android:contentDescription="@string/currently_doing_the_task"
        app:srcCompat="@drawable/ic_pending"
        tools:ignore="ImageContrastCheck" />

</androidx.cardview.widget.CardView>
